export const snapshot = {};

snapshot[`createArrayValueMixin - toHaveItemsContaining 1`] = `'Expected items to contain grape, but got [ "apple", "banana" ]'`;

snapshot[`createArrayValueMixin - toHaveItemsContainingEqual 1`] = `
"Expected items to contain equal { id: 3 }, but got [ {...}, {...} ]

Diff (-Actual / +Expected):

    [
      {
        id: 1,
      },
      {
        id: 2,
      },
  +   {
  +     id: 3,
  +   },
    ]"
`;

snapshot[`createArrayValueMixin - toHaveItemsMatching 1`] = `
'Expected items to contain item matching { name: "Charlie" }, but got [ {...}, {...} ]

Diff (-Actual / +Expected):

    [
      {
        id: 1,
        name: "Alice",
        age: 30,
      },
      {
        id: 2,
        name: "Bob",
        age: 25,
      },
  +   {
  +     name: "Charlie",
  +   },
    ]'
`;

snapshot[`createArrayValueMixin - toHaveItemsEmpty 1`] = `"Expected items to be empty, but got length 1"`;

snapshot[`createArrayValueMixin - toHaveItemsContaining with source context 1`] = `
'Expected items to contain grape, but got [ "apple", "banana" ]

Context (packages/probitas-expect/mixin/array_value_mixin_test.ts:154:5)

  153│   await t.step("fail (noColor)", async () => {
  154│     const mixin = createArrayValueMixin(
  155│       () => ["apple", "banana"],
     ┆
  164│       t,
  165│       catchError(() => applied.toHaveItemsContaining("grape")).message,
     │                                ^
  166│     );'
`;

snapshot[`createArrayValueMixin - toHaveItemsContaining with source context 2`] = `
'[1m[31mExpected items to contain grape, but got [ "apple", "banana" ][39m[0m

[1mContext[0m [90m(packages/probitas-expect/mixin/array_value_mixin_test.ts:169:5)[39m

  [90m168│ [39m
  [90m169│   await t.step("fail (withColor)", async () => {[39m
  [90m170│     const mixin = createArrayValueMixin([39m
  [90m   ┆[39m
  [90m181│       t,[39m
  [90m182│       catchError(() => applied.toHaveItemsContaining("grape")).message,[39m
  [90m   │                                [39m[31m^[39m
  [90m183│     );[39m'
`;
